Message: Fix avatar size on mobile jumping to smaller on load (#2670)

--- a/src/components/middle/message/Message.scss
+++ b/src/components/middle/message/Message.scss
@@ -64,11 +64,6 @@
     left: 0;
 
     margin-right: 0.3125rem;
-
-    @media (max-width: 600px) {
-      width: 2.5rem;
-      height: 2.5rem;
-    }
   }
 
   .quick-reaction {
